<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/setting_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            style="@style/ImageButtonSettings"
            android:src="@drawable/back_button"
             />

        <TextView
            style="@style/textTopSettings"
            android:text="@string/settings"/>

    </LinearLayout>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher1"
        style="@style/switch_style"
        android:gravity="left|center_vertical"
        android:text="@string/setting_theme" />

    <Button
        android:id="@+id/theme_switcher2"
        style="@style/setting_button"
        android:drawableRight="@drawable/share"
        android:text="@string/setting_share" />

    <Button
        android:id="@+id/theme_switcher3"
        style="@style/setting_button"
        android:drawableRight="@drawable/support"
        android:text="@string/setting_support" />

    <Button
        android:id="@+id/theme_switcher4"
        style="@style/setting_button"
        android:drawableRight="@drawable/forward"
        android:text="@string/setting_terms" />

</LinearLayout>