<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    style="@style/main_layout" >

    <TextView
        style="@style/textTop"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/searchButton"
        style="@style/ButtonStyle"
        android:text="@string/search"
        app:cornerRadius="@dimen/button_radius"
        app:icon="@drawable/find"
        app:iconGravity="textStart"
        app:iconTint = "@color/black"/>

    <Button
        android:id="@+id/media"
        style="@style/ButtonStyle"
        android:text="@string/media"
        app:cornerRadius="@dimen/button_radius"
        app:icon="@drawable/muzic"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/settings"
        style="@style/ButtonStyle"
        android:text="@string/settings"
        app:cornerRadius="@dimen/button_radius"
        app:icon="@drawable/set"
        app:iconGravity="textStart"
        app:iconTint = "@color/black"/>

</LinearLayout>